--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,28 @@
 /*  your css code here. If applicable */
+.hero{
+	width:700px;
+	height:300px;
+	/* background-color:lightgray; */
+	display:flex;
+	flex-direction:row;
+	justify-content:space-around;
+	align-items:center;
+}
+.image>img{
+	width:400px;
+	height:200px;
+	object-fit:cover;
+}
+.explore{
+	width:200px;
+	height:200px;
+	font-size:10px;
+	text-align:center;
+	align-content:center;
+}
+.explore>button{
+	background-color:red;
+	border-radius:3px;
+	padding:2px;
+	color:white;
+}
